Bug 326632 - "Always Ask" and "Store" option in "Edit Connection" dialog seems swapped
Summary: "Always Ask" and "Store" option in "Edit Connection" dialog seems swapped
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
: 327589 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-25 16:32 UTC by Mario Ray Mahardhika
Modified: 2024-12-23 18:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Ray Mahardhika 2013-10-25 16:32:48 UTC
I have a VPN connection previously saved with Store option. However, when I Edit it, the option selected is Always Ask. So, I change it back to Store. Now everytime I want to connect, a password dialog appears. Curious, I change it to Always Ask (password filled first). Now it connects without asking for password. Switching them back and forth triggers the same behavior.

Reproducible: Always

Steps to Reproduce:
1. Ensure you have a VPN connection
2. Set the password option to Store
3. Try to connect, a password dialog will appear
4. Set the password option to Always Ask (let the password filled before changing)
5. Try to connect, a password dialog will NOT appear and it connects automatically
Actual Results:  
In step 3, a password dialog appears
In step 5, NO password dialog appears

Expected Results:  
In step 3, NO password dialog appears
In step 5, a password dialog appears
Comment 1 Lukáš Tinkl 2013-10-29 11:24:52 UTC
What type of VPN connection it is?
Comment 2 Mario Ray Mahardhika 2013-10-29 16:59:52 UTC
PPTP
Comment 3 Lukáš Tinkl 2013-10-29 17:32:35 UTC
Git commit 917c121d2f7700b107d8f78b55f77b2c0c9abe02 by Lukáš Tinkl.
Committed on 29/10/2013 at 17:31.
Pushed by lukas into branch 'master'.

Fix #326632 - "Always Ask" and "Store" option in "Edit Connection" dialog seems swapped

M  +10   -10   vpn/pptp/pptpwidget.cpp
M  +3    -3    vpn/strongswan/strongswanwidget.cpp

http://commits.kde.org/plasma-nm/917c121d2f7700b107d8f78b55f77b2c0c9abe02
Comment 4 Lukáš Tinkl 2013-11-14 10:25:00 UTC
*** Bug 327589 has been marked as a duplicate of this bug. ***