Fix #326632 - "Always Ask" and "Store" option in "Edit Connection" dialog seems swapped

BUG: 326632